--- a/src/app/_hauptKomponente/g-kunden/g-kunden.component.html
+++ b/src/app/_hauptKomponente/g-kunden/g-kunden.component.html
@@ -23,197 +23,11 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">KU 40-001</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Thomas Brändle</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">9608 Ganterschwil</a></td>
-                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">Friedaustrasse 3</a></td>
+                    <tr *ngFor="let kunde of kunden">
+                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">{{kunde.vorgangsNummer}}</a></td>
+                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">{{kunde.kunde}}</a></td>
+                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">{{kunde.ortschaft}}</a></td>
+                        <td><a routerLink="/kunden/kunde" routerLinkActive="active">{{kunde.adresse}}</a></td>
                     </tr>
                 </tbody>
             </table>
