--- a/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.html
+++ b/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.html
@@ -10,24 +10,15 @@
                 <p class="unterTitel">Darstellung</p>
                 <p class="name">Schriftart Überschriften:</p>
                 <select name="fontHeadline" id="">
-                    <option value="test">Segoe Print</option>
-                    <option value="test">Arial</option>
-                    <option value="test">Roboto</option>
-                    <option value="test">Test</option>
-                    <option value="test">Test</option>
+                    <option *ngFor="let fHoption of fHoptions">{{fHoption.fHoption}}</option>
                 </select>
                 <p class="name">Schriftart Lauftext:</p>
                 <select name="fontText" id="">
-                    <option value="test">Roboto</option>
-                    <option value="test">Arial</option>
-                    <option value="test">Segoe Print</option>
-                    <option value="test">Test</option>
-                    <option value="test">Test</option>
+                    <option *ngFor="let lToption of lToptions">{{lToption.lToption}}</option>
                 </select>
                 <p class="name">Ansicht Modus:</p>
                 <select name="viewMode" id="">
-                    <option value="test">Original</option>
-                    <option value="test">Dark</option>
+                    <option *ngFor="let mode of modes">{{mode.mode}}</option>
                 </select>
             </div>
         </div>
@@ -36,51 +27,35 @@
                 <p class="unterTitel">Gruppen und Kategorien</p>
                 <p>Zahlungskonditionen:</p>
                 <select name="zahlungsbedingungen" id="zahlungsbedingungen">
-                    <option value="zb_01">10 Tage 3% Skonto, 30 Tage Netto</option>
-                    <option value="zb_02">7 Tage 2% Skonto, 20 Tage Netto</option>
-                    <option value="zb_03">30 Tage Netto</option>
-                    <option value="zb_04">14 Tage Netto</option>
-                    <option value="zb_05">Vorauskasse</option>
-                    <option value="zb_06">Barzahlung</option>
-                    <option value="zb_07">Teilzahlung</option>
+                    <option *ngFor="let zbGruppe of zbGroup">{{zbGruppe.zbGruppe}}</option>
                 </select>
                 <div class="btnBearbeiten">
                     <p (click)="openGruppen()">Zahlungskonditionen bearbeiten</p>
                 </div>
                 <p>Zahlungsarten:</p>
                 <select name="zahlungsarten" id="zahlungsarten">
-                    <option value="za_01">Rechnung</option>
-                    <option value="za_02">Vorauskasse</option>
-                    <option value="za_03">Barzahlung</option>
+                    <option *ngFor="let zaGruppe of zaGroup">{{zaGruppe.zaGruppe}}</option>
                 </select>
                 <div class="btnBearbeiten">
                     <p (click)="openGruppen()">Zahlungsarten bearbeiten</p>
                 </div>
                 <p>Artikelgruppen:</p>
                 <select name="artikelgruppen" id="artikelgruppen">
-                    <option value="ag_01">Webentwicklung</option>
-                    <option value="ag_02">Fotografie</option>
-                    <option value="ag_03">Videografie</option>
-                    <option value="ag_04">Anderes</option>
+                    <option *ngFor="let agGruppe of agGroup">{{agGruppe.agGruppe}}</option>
                 </select>
                 <div class="btnBearbeiten">
                     <p (click)="openGruppen()">Artikelgruppen bearbeiten</p>
                 </div>
                 <p>Kundengruppen:</p>
                 <select name="kundengruppen" id="kundengruppen">
-                    <option value="kg_01">Privatperson</option>
-                    <option value="kg_02">Geschäftspartner</option>
-                    <option value="kg_03">Verein</option>
-                    <option value="kg_04">Anderes</option>
+                    <option *ngFor="let kgGruppe of kgGroup">{{kgGruppe.kgGruppe}}</option>
                 </select>
                 <div class="btnBearbeiten">
                     <p (click)="openGruppen()">Kundengruppen bearbeiten</p>
                 </div>
                 <p>Einheiten:</p>
                 <select name="einheit" id="einheit">
-                    <option value="eh_01">Stk.</option>
-                    <option value="eh_02">Pauschal</option>
-                    <option value="eh_03">Stunde</option>
+                    <option *ngFor="let ehGruppe of ehGroup">{{ehGruppe.ehGruppe}}</option>
                 </select>
                 <div class="btnBearbeiten">
                     <p (click)="openGruppen()">Einheiten bearbeiten</p>
