--- a/src/app/_hauptKomponente/m-profil/m-profil.component.html
+++ b/src/app/_hauptKomponente/m-profil/m-profil.component.html
@@ -12,19 +12,19 @@
                 <p class="unterTitel">Profil</p>
                 <div class="row">
                     <p>Nummer:</p>
-                    <p>MA 101-001</p>
+                    <p>{{profilNummer}}</p>
                 </div>
                 <div class="row">
                     <p>Name:</p>
-                    <input type="text" id="name" value="Thomas Brändle">
+                    <input type="text" id="name" value="{{profilName}}">
                 </div>
                 <div class="row">
                     <p>Telefon:</p>
-                    <input type="text" id="Telefon" value="+41 79 520 65 11">
+                    <input type="text" id="Telefon" value="{{telefon}}">
                 </div>
                 <div class="row">
                     <p>E-Mail:</p>
-                    <input type="text" id="E-Mail" value="thomas@thomas-braendle.com">
+                    <input type="text" id="E-Mail" value="{{email}}">
                 </div>
             </div>
             <div class="split secondSplit">
