--- a/src/app/_popupKomponente/auftrag-abschliessen/auftrag-abschliessen.component.html
+++ b/src/app/_popupKomponente/auftrag-abschliessen/auftrag-abschliessen.component.html
@@ -15,29 +15,29 @@
         <div class="budgetContent">
             <div class="list">
                 <p>Budget gemäss Positionenliste:</p>
-                <input type="text" readonly class="contentReadonly" value="CHF 3'500.15.-">
+                <input type="text" readonly class="contentReadonly" value="CHF {{budget}}.-">
             </div>
             <div class="list">
                 <p>Kosten gemäss Stunden Mitarbeiter:</p>
-                <input type="text" readonly class="contentReadonly" value="CHF 2'010.00.-">
+                <input type="text" readonly class="contentReadonly" value="CHF {{stunden}}.-">
             </div>
             <div class="list">
                 <p>Kosten in Regie gemäss Meilensteine:</p>
-                <input type="text" readonly class="contentReadonly" value="CHF 150.00.-">
+                <input type="text" readonly class="contentReadonly" value="CHF {{regie}}.-">
             </div>
             <div class="list">
                 <p>Ertrag:</p>
-                <input type="text" readonly class="contentReadonly" value="CHF 1'320.00.-">
+                <input type="text" readonly class="contentReadonly" value="CHF {{ertrag}}.-">
             </div>
             <div class="list">
                 <p>Marge:</p>
-                <input type="text" readonly class="contentReadonly" value="40%">
+                <input type="text" readonly class="contentReadonly" value="{{marge}}%">
             </div>
             <div class="abstand">
             </div>
             <div class="list">
                 <p>Rechnungsbetrag:</p>
-                <input type="text" readonly class="contentReadonly" value="CHF 3'650.15.-">
+                <input type="text" readonly class="contentReadonly" value="CHF {{rechnungsbetrag}}.-">
             </div>
         </div>
     </div>
