--- a/src/app/_popupKomponente/belege/belege.component.html
+++ b/src/app/_popupKomponente/belege/belege.component.html
@@ -45,163 +45,12 @@
                     <thead>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
+                        <tr *ngFor="let beleg of belege">
+                            <td>{{beleg.datum}}</td>
+                            <td>{{beleg.art}}</td>
                             <td><a href="">Erneut versenden</a></td>
                             <td><a href="">Download</a></td>
                         </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>14.02.2022</td>
-                            <td>Rechnung</td>
-                            <td><a href="">Erneut versenden</a></td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-
                     </tbody>
                 </table>
             </div>
