--- a/src/app/_popupKomponente/kundendaten/kundendaten.component.html
+++ b/src/app/_popupKomponente/kundendaten/kundendaten.component.html
@@ -20,129 +20,17 @@
                         <th>Kundennummer</th>
                         <th>Kunde</th>
                         <th>Adresse</th>
+                        <th>Ortschaft</th>
                         <th>Kategorie</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">KU 40-001</a></td>
-                        <td><a href="">Thomas Brändle</a></td>
-                        <td><a href="">9608 Ganterschwil, Friedaustrasse 3</a></td>
-                        <td><a href="">Privatkunde</a></td>
+                    <tr *ngFor="let kunde of kunden">
+                        <td>{{kunde.nummer}}</td>
+                        <td>{{kunde.name}}</td>
+                        <td>{{kunde.strasse}}</td>
+                        <td>{{kunde.ort}}</td>
+                        <td>{{kunde.gruppe}}</td>
                     </tr>
                 </tbody>
             </table>
