--- a/src/app/_hauptKomponente/h-kunde/h-kunde.component.html
+++ b/src/app/_hauptKomponente/h-kunde/h-kunde.component.html
@@ -11,49 +11,45 @@
             <div class="split firstSplit">
                 <div class="row">
                     <p>Nummer:</p>
-                    <p>KU 40-001</p>
+                    <p>{{kundeNummer}}</p>
                 </div>
                 <div class="row">
                     <p>Name:</p>
-                    <input type="text" value="Thomas Brändle">
+                    <input type="text" value="{{kundenName}}">
                 </div>
                 <div class="row">
                     <p>Adresse:</p>
-                    <input type="text" value="Friedaustrasse 3">
+                    <input type="text" value="{{kundenAdresse}}">
                 </div>
                 <div class="row">
                     <p>Ort:</p>
-                    <input type="text" value="9608 Ganterschwil">
+                    <input type="text" value="{{kundenOrt}}">
                 </div>
                 <div class="row">
                     <p>Telefon:</p>
-                    <input type="text" value="+41 79 520 65 11">
+                    <input type="text" value="{{kundenTelefon}}">
                 </div>
                 <div class="row">
                     <p>E-Mail:</p>
-                    <input type="text" value="design@thomas-braendle.com">
+                    <input type="text" value="{{kundenEmail}}">
                 </div>
                 <div class="row">
                     <p>Website:</p>
-                    <input type="text" value="www.thomas-braendle.com">
+                    <input type="text" value="{{kundenWebsite}}">
                 </div>
             </div>
             <div class="split secondSplit">
                 <div class="btnBearbeiten">
                     <div class="notizen">
-                        <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                        </textarea>
+                        <textarea readonly="readonly">{{notizen}}</textarea>
                     </div>
                     <p (click)="openNotizen()">Notizen bearbeiten</p>
                 </div>
             </div>
             <div class="split thirdSplit">
                 <div class="dropDown">
-                    <select name="typ" id="kdTyp">
-                        <option value="privatkunde">Privatkunde</option>
-                        <option value="geschaeftskunde">Geschäftskunde</option>
-                        <option value="verein">Verein</option>
-                        <option value="anderes">Anderes</option>
+                    <select name="kundengruppen" id="kundengruppen">
+                        <option *ngFor="let kgGruppe of kgGroup">{{kgGruppe.kgGruppe}}</option>
                     </select>
                 </div>
                 <div class="btnBearbeiten">
@@ -91,37 +87,9 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
-                            <td><a routerLink="/projekte/angebot">Offen</a></td>
+                        <tr *ngFor="let angebot of angebote">
+                            <td><a routerLink="/projekte/angebot">{{angebot.vorgangsNummer}}</a></td>
+                            <td><a routerLink="/projekte/angebot">{{angebot.status}}</a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -137,81 +105,9 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        <tr *ngFor="let auftrag of auftraege">
+                            <td><a routerLink="/projekte/auftrag">{{auftrag.vorgangsNummer}}</a></td>
+                            <td><a routerLink="/projekte/auftrag">{{auftrag.status}}</a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -227,21 +123,9 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">RE 60-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">RE 60-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">RE 60-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
-                        </tr>
-                        <tr>
-                            <td><a routerLink="/projekte/auftrag">RE 60-001</a></td>
-                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        <tr *ngFor="let rechnung of rechnungen">
+                            <td><a routerLink="/projekte/auftrag">{{rechnung.vorgangsNummer}}</a></td>
+                            <td><a routerLink="/projekte/auftrag">{{rechnung.status}}</a></td>
                         </tr>
                     </tbody>
                 </table>
