--- a/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.html
+++ b/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.html
@@ -11,27 +11,27 @@
             <div class="split firstSplit">
                 <div class="row">
                     <p>Name:</p>
-                    <p>Thomas Brändle</p>
+                    <p>{{unternehmenName}}</p>
                 </div>
                 <div class="row">
                     <p>Adresse:</p>
                     <p>
-                        Friedaustrasse 3
-                        <br /> 9608 Ganterschwil
-                        <br /> CH - Schweiz
+                        {{unternehmenAdresse}}
+                        <br /> {{unternehmenOrt}}
+                        <br /> {{unternehmenLand}}
                     </p>
                 </div>
                 <div class="row">
                     <p>Telefon:</p>
-                    <p>+41 79 520 65 11</p>
+                    <p>{{unternehmenTelefon}}</p>
                 </div>
                 <div class="row">
                     <p>E-Mail:</p>
-                    <p>design@thomas-braendle.com</p>
+                    <p>{{unternehmenEmail}}</p>
                 </div>
                 <div class="row">
                     <p>Website:</p>
-                    <p>www.thomas-braendle.com</p>
+                    <p>{{unternehmenWebsite}}</p>
                 </div>
             </div>
             <div class="split secondSplit">
@@ -82,175 +82,13 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
-                    </tr>
-                    <tr>
-                        <td>MA 100-001</td>
-                        <td>Brändle</td>
-                        <td>Thomas</td>
-                        <td>Geschäftsführer</td>
-                        <td>Geschäftsleitung</td>
-                        <td>100%</td>
-                        <td>Ja</td>
+                        <td>{{vorgangsNummer}}</td>
+                        <td>{{nachname}}</td>
+                        <td>{{vorname}}</td>
+                        <td>{{funktion}}</td>
+                        <td>{{abteilung}}</td>
+                        <td>{{stellenprozent}}</td>
+                        <td>{{administrator}}</td>
                     </tr>
                 </tbody>
             </table>
