--- a/src/app/_popupKomponente/ansprechpartner/ansprechpartner.component.html
+++ b/src/app/_popupKomponente/ansprechpartner/ansprechpartner.component.html
@@ -13,55 +13,9 @@
             <div class="popupTableFirst popupTable">
                 <table>
                     <tbody>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
+                        <tr *ngFor="let partner of ansprechpartner">
+                            <td>{{partner.anrede}} {{partner.vorname}} {{partner.nachname}}</td>
                         </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Thomas Brändle - AP 50-001</a></td>
-                        </tr>
-
                     </tbody>
                 </table>
             </div>
@@ -72,25 +26,23 @@
         <div class="split secondSplit">
             <p>Anrede:</p>
             <select name="anrede" id="anrede">
-                <option value="herr">Herr</option>
-                <option value="frau">Frau</option>
+                <option *ngFor="let anrede of anrede">{{anrede.anrede}}</option>
             </select>
             <p>Name:</p>
-            <input type="text" value="Thomas Brändle">
+            <input type="text" value="{{vorname}} {{nachname}}">
             <p>E-Mail:</p>
-            <input type="text" value="thomasbraendle94@gmail.com">
+            <input type="text" value="{{email}}">
             <p>Telefon:</p>
-            <input type="text" value="+41 79 520 65 11">
+            <input type="text" value="{{telefon}}">
             <p>Mobile:</p>
-            <input type="text" value="+41 79 520 65 11">
+            <input type="text" value="{{mobile}}">
             <p>Funktion:</p>
-            <input type="text" value="Geschäftsführer">
+            <input type="text" value="{{funktion}}">
         </div>
         <div class="split thirdSplit">
             <p>Notizen:</p>
             <div class="notizen notizenHoch">
-                <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                </textarea>
+                <textarea readonly="readonly">{{notiz}}</textarea>
             </div>
             <div class="btnBearbeiten btnNotizen">
                 <p (click)="openNotizen()">Notizen bearbeiten</p>
