--- a/src/app/_popupKomponente/einstellungen/einstellungen.component.html
+++ b/src/app/_popupKomponente/einstellungen/einstellungen.component.html
@@ -10,36 +10,32 @@
     <div class="popupContent">
         <div class="split firstSplit">
             <p>Name:</p>
-            <input type="text" value="Thomas Brändle">
+            <input type="text" value="{{unternehmenName}}">
             <p>Adresse:</p>
-            <input type="text" value="Friedaustrasse 3">
+            <input type="text" value="{{unternehmenAdresse}}">
             <p>Ortschaft:</p>
-            <input type="text" value="9608 Ganterschwil">
+            <input type="text" value="{{unternehmenOrt}}">
             <p>Land:</p>
-            <input type="text" value="CH - Schweiz">
+            <input type="text" value="{{unternehmenLand}}">
             <p>Rechtsform:</p>
-            <input type="text" value="Einzelfirma">
+            <input type="text" value="{{unternehmenRechtsform}}">
             <p>UID:</p>
-            <input type="text" value="Keine">
+            <input type="text" value="{{unternehmenUID}}">
         </div>
         <div class="split secondSplit">
             <p>Website:</p>
-            <input type="text" value="www.thomas-braendle.com">
+            <input type="text" value="{{unternehmenWebsite}}">
             <p>E-Mail:</p>
-            <input type="text" value="design@thomas-braendle.com">
+            <input type="text" value="{{unternehmenEmail}}">
             <p>Telefon:</p>
-            <input type="text" value="+41 79 520 65 11">
+            <input type="text" value="{{unternehmenTelefon}}">
             <p>Start Geschäftsjahr:</p>
-            <input type="date">
+            <input type="text" value="{{unternehmenStartJahr}}">
             <p>Mehrwertsteuer:</p>
-            <input type="text" value="0">
+            <input type="text" value="{{unternehmenMWST}}">
             <p>Abteilungen:</p>
-            <select name="abteilungen" id="abteilungen">
-                <option value="ab_01">Entwicklung</option>
-                <option value="ab_02">Geschäftsleitung</option>
-                <option value="ab_03">Sekretariat</option>
-                <option value="ab_04">Lernende</option>
-                <option value="ab_04">Anderes</option>
+            <select name="abteilunggruppe" id="abteilunggruppe">
+                <option *ngFor="let abGruppe of abGroup">{{abGruppe.abGruppe}}</option>
             </select>
             <div class="btnBearbeiten">
                 <p (click)="openGruppen()">Abteilungen bearbeiten</p>
@@ -48,8 +44,7 @@
         <div class="split thirdSplit">
             <p>Notizen:</p>
             <div class="notizen notizenHoch">
-                <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                </textarea>
+                <textarea readonly="readonly">{{notizen}}</textarea>
             </div>
             <div class="btnBearbeiten btnNotizen">
                 <p (click)="openNotizen()">Notizen bearbeiten</p>
