--- a/src/app/_popupKomponente/generate-kunde/generate-kunde.component.html
+++ b/src/app/_popupKomponente/generate-kunde/generate-kunde.component.html
@@ -12,33 +12,32 @@
             <p>Kundennummer:</p>
             <input class="contentReadonly" readonly type="text" value="KU 40-001">
             <p>Name:</p>
-            <input type="text" value="Thomas Brändle">
+            <input type="text" placeholder="Name">
             <p>Adresse:</p>
-            <textarea class="inputAdresse" type="text">Friedaustrasse 3, 9608 Ganterschwil, CH - Schweiz
-            </textarea>
+            <input type="text" placeholder="Strasse/Nr">
+            <p>Ort:</p>
+            <input type="text" placeholder="PLZ/Ortschaft">
+            <p>Land:</p>
+            <input type="text" placeholder="Kürzel/Land">
         </div>
         <div class="split secondSplit">
             <p>Website:</p>
-            <input type="text" value="www.thomas-braendle.com">
+            <input type="text" placeholder="Website">
             <p>E-Mail:</p>
-            <input type="text" value="design@thomas-braendle.com">
+            <input type="text" placeholder="E-Mail">
             <p>Telefon:</p>
-            <input type="text" value="+41 79 520 65 11">
+            <input type="text" placeholder="Telefonnummer">
             <p>Kundengruppe:</p>
             <div class="dropDown">
-                <select name="kundenart" id="kundenart">
-                    <option value="ka01">Privatperson</option>
-                    <option value="ka02">Geschäftspartner</option>
-                    <option value="ka03">Verein</option>
-                    <option value="ka03">Anderes</option>
+                <select name="kundengruppen" id="kundengruppen">
+                    <option *ngFor="let kgGruppe of kgGroup">{{kgGruppe.kgGruppe}}</option>
                 </select>
             </div>
         </div>
         <div class="split thirdSplit">
             <p>Notizen:</p>
             <div class="notizen notizenHoch">
-                <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                </textarea>
+                <textarea readonly="readonly">{{notizen}}</textarea>
             </div>
             <div class="btnBearbeiten btnNotizen">
                 <p (click)="openNotizen()">Notizen bearbeiten</p>
