--- a/src/app/_popupKomponente/metainformationen/metainformationen.component.html
+++ b/src/app/_popupKomponente/metainformationen/metainformationen.component.html
@@ -10,68 +10,36 @@
     <div class="popupContent">
         <div class="metaContent">
             <div class="metaList">
-                <p>
-                    Vorgangsnummer
-                </p>
-                <p>
-                    XX XX-XXX
-                </p>
+                <p>Vorgangsnummer</p>
+                <p>{{vorgangsNummer}}</p>
             </div>
             <div class="metaList">
-                <p>
-                    Vorgangsart
-                </p>
-                <p>
-                    Auftrag
-                </p>
+                <p>Vorgangsart</p>
+                <p>{{vorgangsArt}}</p>
             </div>
             <div class="metaList">
-                <p>
-                    Vorgang
-                </p>
-                <p>
-                    Thomas Brändle AG
-                </p>
+                <p>Vorgang</p>
+                <p>{{vorgang}}</p>
             </div>
             <div class="metaList">
-                <p>
-                    Status
-                </p>
-                <p>
-                    Offen
-                </p>
+                <p>Status</p>
+                <p>{{status}}</p>
             </div>
             <div class="metaList">
-                <p>
-                    Datum erfasst
-                </p>
-                <p>
-                    07.11.2022 | 19:00
-                </p>
+                <p>Datum erfasst</p>
+                <p>{{datumErfasst}}</p>
             </div>
             <div class="metaList">
-                <p>
-                    User erfasst
-                </p>
-                <p>
-                    Thomas Brändle
-                </p>
+                <p>User erfasst</p>
+                <p>{{userErfasst}}</p>
             </div>
             <div class="metaList">
-                <p>
-                    Datum zuletzt gespeichert
-                </p>
-                <p>
-                    25.11.2022 | 14:44
-                </p>
+                <p>Datum zuletzt gespeichert</p>
+                <p>{{datumZuletztGespeichert}}</p>
             </div>
             <div class="metaList">
-                <p>
-                    User zuletzt gespeichert
-                </p>
-                <p>
-                    Thomas Brändle
-                </p>
+                <p>User zuletzt gespeichert</p>
+                <p>{{userZuletztGespeichert}}</p>
             </div>
         </div>
 
