--- a/src/app/_popupKomponente/rechnungsadresse/rechnungsadresse.component.html
+++ b/src/app/_popupKomponente/rechnungsadresse/rechnungsadresse.component.html
@@ -11,11 +11,11 @@
         <div class="split firstSplit">
             <p>Aktuelle Adresse:</p>
             <p class="contentReadonly">
-                Friedaustrasse 3<br />9608 Ganterschwil<br />CH - Schweiz
+                {{aktStrasse}}<br />{{aktOrt}}<br />{{aktLand}}
             </p>
             <p>Ausgewählte Adresse:</p>
             <p class="contentReadonly">
-                Friedaustrasse 3<br />9608 Ganterschwil<br />CH - Schweiz
+                {{ausStrasse}}<br />{{ausOrt}}<br />{{ausLand}}
             </p>
             <p>Neue Adresse:</p>
             <input type="text" placeholder="Adresse">
@@ -40,140 +40,10 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Friedaustrasse 3</a></td>
-                            <td><a href="">9608 Ganterschwil</a></td>
-                            <td><a href="">CH - Schweiz</a></td>
+                        <tr *ngFor="let adresse of adressen">
+                            <td>{{adresse.strasse}}</td>
+                            <td>{{adresse.ort}}</td>
+                            <td>{{adresse.land}}</td>
                         </tr>
                     </tbody>
                 </table>
